# grafika-projekt

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  GrafikaProjekt  GrafikaProjekt.cpp  GrafikaProjekt.h  README.md  main.cpp
cmake/: FindGLFW3.cmake  FindGLM.cmake  Findassimp.cmake
include/glad/: glad.h
src/: Autors.cpp  Autors.h  CMakeLists.txt  EBO.cpp  EBO.h  Game.cpp  Game.h  Instruction.cpp  Instruction.h  Kamera.cpp  Kamera.h  Menu.cpp  Menu.h  State.h  StatusGry.cpp  StatusGry.h  Tekstury.cpp  Tekstury.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Zegary.cpp  Zegary.h  glad.c  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  terrainGenerator.cpp  terrainGenerator.h  vertex.h
src/helper/: debugutils.h  tsqueue.cpp  tsqueue.h
src/resources/: rock.mtl  tree.mtl
src/shaders/: default.frag  default.vert  light2.frag  light2.vert  menu_default.frag  menu_default.vert  obstacle.frag  obstacle.vert  terrain.frag  terrain.vert
